# solana-4-in-line

./: .gitignore  Anchor.toml  LICENSE  README.MD
app/: .env.local  manifest.json  package.json
app/src/components/Board/: index.tsx
app/src/components/CreateGame/: index.tsx
app/src/contexts/: ClientWalletProvider.tsx
app/src/pages/: [slug].tsx  _app.tsx  _document.js  index.tsx
app/src/utils/: four_in_line.json  playGame.ts  side_stacker.json  useProgram.ts
programs/side-stacker/: Cargo.toml
programs/side-stacker/src/: lib.rs
tests/: side-stacker.ts
